--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -26,7 +21,7 @@
 }
 
 .logo_place_header {
-  background-image: url("../images/logo_place_header.svg");
+  background-image: url(../images/logo_place_header.svg);
   position: absolute;
   top: 30px;
   left: 64px;
@@ -84,50 +79,54 @@
   justify-content: center;
 }
 
-.two-colums {
+.two-columns {
   display: flex;
   width: 80%;
   justify-content: space-between;
 }
 
-.two-colums__brief {
+.two-columns__brief {
   width: 175px;
   color: #2F80ED;
   line-height: 1.2;
   font-size: 18px;
+  margin: 0;
 }
 
-.two-colums__main-text {
+.two-columns__main-text {
   margin-left: auto;
   min-width: 784px;
   right: 0;
   width: 80%;
 }
 
-.two-colums__main-text_paragraph {
+.two-columns__paragraph {
   line-height: 34px;
   font-size: 24px;
+  margin: 0;
+  padding-bottom: 30px;
 }
 
-.two-colums__main-text_paragraph:nth-child(2) {
-  margin: 30px 0;
+.two-columns__paragraph:nth-child(3) {
+  padding-bottom: 0;
 }
 
-.two-colums__main-text_paragraph_span-accent {
+.two-columns__span-accent {
   line-height: 34px;
   font-size: 24px;
   font-weight: bold;
 }
 
 .digits {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .section-title {
+  margin: 0;
   width: 60%;
   text-align: center;
   line-height: 1.15;
@@ -137,14 +136,16 @@
 
 .section-subtitle {
   width: 60%;
-  margin-top: 20px;
+  margin: 20px 0 0;
   text-align: center;
   line-height: 34px;
   font-size: 24px;
-  font-weight: bold;
+  font-weight: normal;
 }
 
 .table {
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -152,8 +153,8 @@
 }
 
 .table__cell {
+  list-style-type: none;
   margin-top: 60px;
-  display: inline-block;
   width: 250px;
 }
 
@@ -161,12 +162,13 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
+  margin: 0 0 20px;
 }
 
 .table__text {
+  margin: 20px 0 0;
   line-height: 1.2;
   font-size: 18px;
-  margin-top: 20px;
 }
 
 .feynman {
@@ -239,48 +241,24 @@
 }
 
 .section-title__theme_dark {
-  width: 60%;
-  text-align: center;
-  line-height: 1.15;
-  font-size: 60px;
-  font-weight: bold;
-  z-index: 1;
 }
 
 .section-subtitle__theme_dark {
-  width: 60%;
-  margin-top: 20px;
-  text-align: center;
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: bold;
-  z-index: 1;
 }
 
 .table_theme_dark{
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  width: 1100px;
   z-index: 1;
 }
 
 .table__cell_theme_dark {
-  margin-top: 60px;
-  display: inline-block;
+  margin-top: 80px;
   width: 200px;
 }
 
 .table__heading_theme_dark {
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: bold;
 }
 
 .table__text_theme_dark {
-  line-height: 1.2;
-  font-size: 18px;
-  margin-top: 20px;
 }
 
 .footer {
@@ -309,6 +287,7 @@
   padding: 18px 0;
   line-height: 25px;
   font-size: 18px;
+  margin: 0;
 }
 
 .footer__column_content_info {
@@ -347,7 +326,7 @@
 
 .logo_place_footer {
   display: flex;
-  background-image: url("../images/logo_place_footer.svg");
+  background-image: url(../images/logo_place_footer.svg);
   height: 35px;
 }
 
