--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,6 +1,8 @@
 .resources__logo-zone {
+  margin: 80px auto 0;
+  padding: 0;
+  list-style: none;
   display: flex;
   justify-content: center;
-  margin: 80px auto 0;
   width: 1100px;
 }
