--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,8 +1,15 @@
 .cards__item {
   margin: 0;
   list-style-type: none;
+  width: -webkit-min-content;
+  width: -moz-min-content;
   width: min-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
