--- a/blocks/description/description.css
+++ b/blocks/description/description.css
@@ -1,6 +1,10 @@
 .description {
   margin: 0;
   padding-top: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
