--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -6,9 +6,15 @@
   background-position: bottom 0 left 0;
   background-size: 867px 637px;
   min-height: 890px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: relative;
   background-color: #f2f2f2;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
