--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,5 +3,7 @@
   background-color: #1f1f1f;
   color: #f2f2f2;
   min-height: 350px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
