--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,6 +1,7 @@
-.resources {
-  margin: 0;
-  padding: 100px 0 217px;
+.form {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -8,7 +9,12 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  justify-items: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  width: 40%;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
 }
