--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,8 +4,12 @@
   max-height: 756px;
   height: 100vh;
   background-color: #f2f2f2;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   overflow: hidden;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   position: relative;
 }
