--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -2,6 +2,8 @@
   margin: 0 48px 0 0;
   width: 620px;
   height: 608px;
+  -o-object-fit: cover;
   object-fit: cover;
+  -o-object-position: 0 0;
   object-position: 0 0;
 }
