--- a/blocks/khan/khan.css
+++ b/blocks/khan/khan.css
@@ -2,6 +2,10 @@
   margin: 0;
   padding: 105px 0 0;
   background-color: #f2f2f2;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
