--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -1,8 +1,13 @@
 .table {
   margin: 0;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   width: 1100px;
 }
