--- a/blocks/techniques/techniques.css
+++ b/blocks/techniques/techniques.css
@@ -2,7 +2,14 @@
   margin: 0 auto;
   padding: 100px 0 0;
   width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
