--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -1,8 +1,15 @@
 .video {
   margin: 0;
   padding: 100px 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   height: 440px;
 }
