добавил форму и скрипт для плавного открытия и закрытия формы

--- a/blocks/form-place/form-place.css
+++ b/blocks/form-place/form-place.css
@@ -1,5 +1,4 @@
 .form-place {
-  visibility: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -18,4 +17,20 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
+}
+
+#form-place {
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#form-place.open {
+  visibility: visible;
+  opacity: 1;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
 }
