--- a/blocks/form/__button-visible/form__button-visible.css
+++ b/blocks/form/__button-visible/form__button-visible.css
@@ -1,4 +1,4 @@
-.form__submit + .form__submit-visible {
+.form__button + .form__button-visible {
   padding: 5px;
   font-size: 20px;
   background-color: white;
@@ -7,7 +7,7 @@
   margin: 0;
 }
 
-.form__submit:hover + .form__submit-visible {
+.form__button:hover + .form__button-visible {
   -webkit-box-shadow: 0 0 8px white;
   box-shadow: 0 0 8px white;
   -webkit-transition: .3s;
@@ -15,7 +15,7 @@
   transition: .3s;
 }
 
-.form__submit:active + .form__submit-visible {
+.form__button:active + .form__button-visible {
   -webkit-transform: scale(0.95);
   -ms-transform: scale(0.95);
   transform: scale(0.95);
