--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,7 +1,7 @@
 .form {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  position: relative;
+  position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
