--- a/blocks/cards/__description/cards__description.css
+++ b/blocks/cards/__description/cards__description.css
@@ -3,5 +3,11 @@
   text-align: center;
   line-height: 23px;
   font-size: 18px;
-  font-weight: normal;
+}
+
+@media screen and (max-width: 1279px) {
+  .cards__description {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
