--- a/blocks/cards/__title/cards__title.css
+++ b/blocks/cards/__title/cards__title.css
@@ -5,3 +5,10 @@
   font-size: 24px;
   font-weight: bold;
 }
+
+@media screen and (max-width: 1279px) {
+  .cards__title {
+    font-size: 20px;
+    line-height: 22px;
+  }
+}
