--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,10 +1,15 @@
 .cards {
   margin: 0;
   padding: 0;
-  width: 920px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  width: 80%;
+  display: grid;
+  grid-template: repeat(2, 1fr)/repeat(3, minmax(min-content, max-content));
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 767px) {
+  .cards {
+    grid-template: repeat(5, 1fr)/1fr;
+    justify-items: center;
+  }
 }
