--- a/blocks/feynman/__subtitle/feynman__subtitle.css
+++ b/blocks/feynman/__subtitle/feynman__subtitle.css
@@ -4,3 +4,18 @@
   font-size: 36px;
   z-index: 1;
 }
+
+@media screen and (max-width: 1279px) {
+  .feynman__subtitle {
+    font-size: 30px;
+    line-height: 40px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .feynman__subtitle {
+    font-size: 20px;
+    line-height: 25px;
+    margin-top: 30px;
+  }
+}
