--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -7,3 +7,25 @@
   width: 648px;
   z-index: 1;
 }
+
+@media screen and (max-width: 1279px) {
+  .feynman__title {
+    width: 100%;
+    font-size: 80px;
+    line-height: 90px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .feynman__title {
+    font-size: 50px;
+    line-height: 60px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .feynman__title {
+    font-size: 25px;
+    line-height: 30px;
+  }
+}
