--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -18,3 +18,20 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 1023px) {
+  .feynman {
+    padding-top: 60px;
+    background-size: 700px;
+    min-height: 750px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .feynman {
+    padding-top: 30px;
+    min-height: 450px;
+    background-size: 400px;
+    background-position: bottom center;
+  }
+}
