--- a/blocks/footer/__column/_content/footer__column_content_copyright.css
+++ b/blocks/footer/__column/_content/footer__column_content_copyright.css
@@ -5,3 +5,16 @@
   -ms-flex-preferred-size: 711px;
   flex-basis: 711px;
 }
+
+@media screen and (max-width: 1279px) {
+  .footer__column_content_copyright {
+    flex-basis: 60%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer__column_content_copyright {
+    grid-area: copyright;
+    align-items: center;
+  }
+}
