--- a/blocks/footer/__column/_content/footer__column_content_info.css
+++ b/blocks/footer/__column/_content/footer__column_content_info.css
@@ -1,2 +1,8 @@
 .footer__column_content_info {
 }
+
+@media screen and (max-width: 767px) {
+  .footer__column_content_info {
+    grid-area: info;
+  }
+}
