--- a/blocks/footer/__comment-form/footer__comment-form.css
+++ b/blocks/footer/__comment-form/footer__comment-form.css
@@ -18,3 +18,10 @@
   -o-transition: .5s;
   transition: .5s;
 }
+
+@media screen and (max-width: 767px) {
+  .footer__comment-form {
+    position: static;
+    padding-top: 20px;
+  }
+}
