--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -7,3 +7,9 @@
   display: -ms-flexbox;
   display: flex;
 }
+
+@media screen and (max-width: 1023px) {
+  .footer {
+    min-height: 250px;
+  }
+}
