--- a/blocks/form-place/_сondition/form-place_condition_open.css
+++ b/blocks/form-place/_сondition/form-place_condition_open.css
@@ -1,7 +1,3 @@
 .form-place_condition_open {
-  visibility: visible;
-  opacity: 1;
-  -webkit-transition: 0.5s;
-  -o-transition: 0.5s;
-  transition: 0.5s;
+  display: flex;
 }
