--- a/blocks/form-place/form-place.css
+++ b/blocks/form-place/form-place.css
@@ -1,7 +1,5 @@
 .form-place {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
@@ -9,18 +7,9 @@
   -ms-flex-align: center;
   align-items: center;
   position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
   z-index: 5;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
-  visibility: hidden;
-  opacity: 0;
-  -webkit-transition: 0.5s;
-  -o-transition: 0.5s;
-  transition: 0.5s;
 }
 
