--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -18,3 +18,10 @@
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 10px;
 }
+
+@media screen and (max-width: 767px) {
+  .form {
+    width: 100%;
+    border-radius: 30px;
+  }
+}
