--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,7 +1,7 @@
 .header__link {
   text-decoration: none;
   color: #2F80ED;
-  font-size: 18px;
-  line-height: 25px;
+  font-size: inherit;
+  line-height: inherit;
   font-weight: normal;
 }
