--- a/blocks/header/__main-illustration/header__main-illustration.css
+++ b/blocks/header/__main-illustration/header__main-illustration.css
@@ -4,7 +4,28 @@
   object-fit: cover;
   right: 0;
   bottom: 0;
-  width: 765px;
-  height: 608px;
+  max-width: 765px;
+  max-height: 100%;
   z-index: 2;
+}
+
+@media screen and (max-width: 1279px) {
+  .header__main-illustration {
+    max-width: 600px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .header__main-illustration {
+    max-width: 480px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header__main-illustration {
+    max-width: 100%;
+    max-height: 60%;
+    right: auto;
+    grid-area: pic;
+  }
 }
