--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,7 +1,29 @@
 .header__title {
   margin: 0 0 0 64px;
-  width: 730px;
+  max-width: 730px;
   z-index: 3;
   font-size: 102px;
   line-height: 96px;
+}
+
+@media screen and (max-width: 1279px) {
+  .header__title {
+    max-width: 400px;
+    font-size: 50px;
+    line-height: 1;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .header__title {
+    margin-left: 20px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header__title {
+    margin: 0;
+    grid-area: title;
+    font-size: 30px;
+  }
 }
