--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -16,3 +16,15 @@
   align-items: center;
   overflow: hidden;
 }
+
+@media screen and (max-width: 1023px) {
+  .kaufman {
+    padding: 60px 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .kaufman {
+    padding: 30px 0;
+  }
+}
