--- a/blocks/khan/__author/khan__author.css
+++ b/blocks/khan/__author/khan__author.css
@@ -4,3 +4,16 @@
   font-size: 30px;
   font-weight: normal;
 }
+
+@media screen and (max-width: 1279px) {
+  .khan__author {
+    font-size: 25px;
+    line-height: 1.5;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .khan__author {
+    font-size: 16px;
+  }
+}
