--- a/blocks/khan/__book-container/khan__book-container.css
+++ b/blocks/khan/__book-container/khan__book-container.css
@@ -4,3 +4,11 @@
   display: -ms-flexbox;
   display: flex;
 }
+
+@media screen and (max-width: 767px) {
+  .khan__book-container {
+    margin: 20px 0 0;
+    flex-direction: column;
+    align-items: center;
+  }
+}
