--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -5,3 +5,16 @@
   text-decoration: none;
   color: #2F80ED;
 }
+
+@media screen and (max-width: 1279px) {
+  .khan__buy-link {
+    font-size: 20px;
+    line-height: 1.5;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .khan__buy-link {
+    margin: 20px 0;
+  }
+}
