--- a/blocks/khan/__container/khan__container.css
+++ b/blocks/khan/__container/khan__container.css
@@ -9,3 +9,9 @@
   -ms-flex-direction: column;
   flex-direction: column;
 }
+
+@media screen and (max-width: 767px) {
+  .khan__container {
+    width: calc(100% - 2* 20px);
+  }
+}
