--- a/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
+++ b/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
@@ -4,3 +4,9 @@
   font-size: 24px;
   font-weight: normal;
 }
+
+@media screen and (max-width: 767px) {
+  .khan__quote-author-subline {
+    font-size: 16px;
+  }
+}
