--- a/blocks/khan/__quote/khan__quote.css
+++ b/blocks/khan/__quote/khan__quote.css
@@ -5,3 +5,18 @@
   font-size: 24px;
   font-weight: normal;
 }
+
+@media screen and (max-width:1279px) {
+  .khan__quote {
+    font-size: 20px;
+    line-height: 1.2;
+    margin: 30px 0;
+    width: auto;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .khan__quote {
+    font-size: 16px;
+  }
+}
