--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,5 @@
 .page {
   margin: 0 auto;
-  min-width: 1100px;
-  max-width: 1600px;
+  max-width: 100vw;
   font-family: 'Helvetica Neue', 'Arial', sans-serif;
 }
