--- a/blocks/resources/__link/resources__link.css
+++ b/blocks/resources/__link/resources__link.css
@@ -2,3 +2,13 @@
   width: 270px;
   height: 38px;
 }
+
+@media screen and (max-width: 767px) {
+  .resources__link {
+    margin-bottom: 20px;
+  }
+
+  .resources__link:last-child {
+    margin: 0;
+  }
+}
