--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -10,3 +10,22 @@
   justify-content: center;
   width: 1100px;
 }
+
+@media screen and (max-width: 1279px) {
+  .resources__logo-zone {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .resources__logo-zone {
+    margin-top: 40px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .resources__logo-zone {
+    flex-direction: column;
+    align-items: center;
+  }
+}
