--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -7,3 +7,16 @@
   font-size: 24px;
   font-weight: normal;
 }
+
+@media screen and (max-width: 1279px) {
+  .section-subtitle {
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .section-subtitle {
+    width: 100%;
+  }
+}
