--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -6,3 +6,16 @@
   font-size: 60px;
   font-weight: bold;
 }
+
+@media screen and (max-width: 1279px) {
+  .section-title {
+    font-size: 40px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .section-title {
+    font-size: 30px;
+    width: 100%;
+  }
+}
