--- a/blocks/table/__cell/_theme/table__cell_theme_dark.css
+++ b/blocks/table/__cell/_theme/table__cell_theme_dark.css
@@ -2,3 +2,16 @@
   margin-top: 80px;
   width: 200px;
 }
+
+@media screen and (max-width: 1279px) {
+  .table__cell_theme_dark {
+    width: 160px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .table__cell_theme_dark {
+    width: 300px;
+    margin-top: 40px;
+  }
+}
