--- a/blocks/table/__cell/table__cell.css
+++ b/blocks/table/__cell/table__cell.css
@@ -3,3 +3,22 @@
   margin-top: 60px;
   width: 250px;
 }
+
+@media screen and (max-width: 1279px) {
+  .table__cell {
+    width: 200px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .table__cell {
+    margin-top: 40px;
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .table__cell {
+    margin: 40px auto 0;
+  }
+}
