--- a/blocks/table/__heading/table__heading.css
+++ b/blocks/table/__heading/table__heading.css
@@ -4,3 +4,9 @@
   font-weight: bold;
   margin: 0 0 20px;
 }
+
+@media screen and (max-width: 1279px) {
+  .table__heading {
+    font-size: 20px;
+  }
+}
