--- a/blocks/table/__text/table__text.css
+++ b/blocks/table/__text/table__text.css
@@ -3,3 +3,9 @@
   line-height: 1.2;
   font-size: 18px;
 }
+
+@media screen and (max-width: 1279px) {
+  .table__text {
+    font-size: 16px;
+  }
+}
