--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -11,3 +11,21 @@
   flex-wrap: wrap;
   width: 1100px;
 }
+
+@media screen  and (max-width: 1279px) {
+  .table {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .table {
+    width: calc(100% - 2 * 50px);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .table {
+    width: 100%;
+  }
+}
