--- a/blocks/techniques/techniques.css
+++ b/blocks/techniques/techniques.css
@@ -13,3 +13,17 @@
   -ms-flex-align: center;
   align-items: center;
 }
+
+@media screen and (max-width: 1023px) {
+  .techniques {
+    padding-top: 60px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .techniques {
+    padding-top: 30px;
+    width: 100%;
+  }
+}
