--- a/blocks/two-columns/__brief/two-columns__brief.css
+++ b/blocks/two-columns/__brief/two-columns__brief.css
@@ -6,3 +6,18 @@
   font-size: 18px;
   margin: 0;
 }
+
+@media screen and (max-width: 1279px) {
+  .two-columns__brief {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .two-columns__brief {
+    align-self: center;
+    margin-bottom: 20px;
+  }
+}
+
