--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -7,3 +7,14 @@
 .two-columns__paragraph:nth-child(2n) {
   margin: 30px 0 30px;
 }
+
+@media screen and (max-width: 1279px) {
+  .two-columns__paragraph {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .two-columns__paragraph:nth-child(2n) {
+    margin: 20px 0 20px;
+  }
+}
