--- a/blocks/two-columns/__span-accent/two-columns__span-accent.css
+++ b/blocks/two-columns/__span-accent/two-columns__span-accent.css
@@ -1,5 +1,5 @@
 .two-columns__span-accent {
-  line-height: 34px;
-  font-size: 24px;
+  line-height: inherit;
+  font-size: inherit;
   font-weight: bold;
 }
