--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -4,4 +4,12 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 20px;
 }
+
+@media screen and (max-width: 1279px) {
+  .video__iframes {
+    flex-direction: column;
+  }
+}
+
