--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -1,13 +1,18 @@
 .cards__image {
   margin: 60px 40px 43px;
   max-width: 160px;
-  max-height: 160px;
   border-radius: 50%;
 }
 
 @media screen and (max-width: 1279px) {
   .cards__image {
     max-width: 100px;
-    max-height: 100px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cards__image {
+    margin: 60px 0 43px;
+    max-width: 100%;
   }
 }
