--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,7 @@
 .header {
   margin: 0;
-  min-height: 600px;
-  max-height: 756px;
-  height: 100vh;
+  min-height: 756px;
+  max-height: 100vh;
   background-color: #f2f2f2;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -14,14 +13,16 @@
   position: relative;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1279px) {
   .header {
-    min-height: 0;
+    min-height: 500px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .header {
+    max-height: none;
+    height: 500px;
     display: grid;
     gap: 20px;
     justify-items: center;
