--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -7,3 +7,20 @@
   width: 877px;
   height: 877px;
 }
+
+@media screen and (max-width: 1023px) {
+  .kaufman__triangle {
+    width: 500px;
+    height: 500px;
+    right: -100px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .kaufman__triangle {
+    background-repeat: repeat;
+    right: 0;
+    width: 300px;
+    height: 100%;
+  }
+}
