правка блока хедер

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -21,8 +21,11 @@
 
 @media screen and (max-width: 767px) {
   .header {
+    background-color: unset;
+    margin: 0 auto;
+    max-width: 320px;
     max-height: none;
-    height: 500px;
+    min-height: 500px;
     display: grid;
     gap: 20px;
     justify-items: center;
